# Clustering_Cpp

./: .gitignore  Clustering.sln
Clustering/: CMakeLists.txt  Clustering.vcxproj  Clustering.vcxproj.filters  extra.txt  main.cpp
Clustering/headers/: Centroid.h  Dot.h  Processor.h
Clustering/src/: Processor.cpp
